--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,23 @@ services:
   expo:
     build: .
     image: expo-dev:latest
-    working_dir: /app
+    working_dir: /app/LedgerTrack
+    command: npx expo start --tunnel
+    depends_on:
+      - api
     volumes:
       - ./:/app
-      - expo_node_modules:/app/node_modules
+      - expo_node_modules:/app/LedgerTrack/node_modules
     ports:
       - "19000:19000"
       - "19001:19001"
       - "19002:19002"
       - "19006:19006"
+      - "8081:8081"
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
       - REACT_NATIVE_PACKAGER_HOSTNAME=0.0.0.0
+      - EXPO_PUBLIC_API_URL=http://localhost:4000
     stdin_open: true
     tty: true
 
